--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Pedidos</title>
+    <title>Gerenciador de Pedidos (TESTES)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
         img.mockup-image:error { content: url('https://placehold.co/400x400/e2e8f0/94a3b8?text=Arte+Indispon%C3%ADvel'); }
         input[type="file"]::file-selector-button { @apply bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-lg hover:bg-gray-300 transition duration-300 border-none mr-4 cursor-pointer; }
         .size-input-container { @apply flex flex-col items-center w-24; }
-        .part-type-selector { @apply px-3 py-1 text-xs font-semibold rounded-md border-2 transition-colors duration-200 shadow-sm; }
+        .part-type-selector { @apply px-3 py-1 text-xs font-semibold rounded-md border-2 transition-colors duration-200; }
         .part-type-selector.active { @apply bg-blue-600 border-blue-600 text-white; }
         .part-type-selector:not(.active) { @apply bg-white border-gray-300 text-gray-600 hover:bg-gray-100; }
         .status-badge { @apply text-xs font-semibold py-1 px-2 rounded-full; }
@@ -37,7 +37,7 @@
     <div id="authContainer" class="flex items-center justify-center min-h-screen">
         <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-xl shadow-md">
             <form id="loginForm">
-                <h2 class="text-2xl font-bold text-center">Login</h2>
+                <h2 class="text-2xl font-bold text-center">Login (Ambiente de Testes)</h2>
                 <div class="mt-4 space-y-4">
                     <input type="email" id="loginEmail" placeholder="E-mail" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                     <input type="password" id="loginPassword" placeholder="Senha" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -51,7 +51,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2.0</h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -110,21 +110,6 @@
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-red-800">DESPESAS TOTAIS</h3><p id="despesasTotais" class="text-2xl font-bold text-red-900">R$ 0,00</p></div>
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-yellow-800">CONTAS A RECEBER</h3><p id="contasAReceber" class="text-2xl font-bold text-yellow-900">R$ 0,00</p></div>
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-blue-800">LUCRO LÍQUIDO</h3><p id="lucroLiquido" class="text-2xl font-bold text-blue-900">R$ 0,00</p></div>
-                </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-                    <div class="bg-white p-6 rounded-lg shadow-sm border">
-                        <h3 class="text-lg font-bold text-gray-800 mb-4">Top 5 Despesas por Categoria</h3>
-                        <div id="topExpensesByCategory" class="space-y-4">
-                            <p class="text-gray-500">Calculando categorias...</p>
-                        </div>
-                    </div>
-                    <div class="bg-white p-6 rounded-lg shadow-sm border">
-                        <h3 class="text-lg font-bold text-gray-800 mb-4">Top 5 Receitas por Categoria</h3>
-                        <div id="topIncomesByCategory" class="space-y-4">
-                            <p class="text-gray-500">Calculando categorias...</p>
-                        </div>
-                    </div>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm border">
                     <div class="flex justify-between items-center mb-4">
@@ -397,13 +382,13 @@
         import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         const IMGBB_API_KEY = "f012978df48f3596b193c06e05589442";
-        const firebaseConfig = { 
-            apiKey: "AIzaSyBVwOs5YBpXaVnx81V-I337KYOH2r0CGKQ", 
-            authDomain: "saas-para-testes.firebaseapp.com", 
-            projectId: "saas-para-testes", 
-            storageBucket: "saas-para-testes.appspot.com", 
-            messagingSenderId: "624364811528", 
-            appId: "1:624364811528:web:a518807b150489078368bd" 
+        const firebaseConfig = {
+          apiKey: "AIzaSyDZrgh2y3d0fiv5uF_d73Syuo54_39L__8",
+          authDomain: "saas-teste-c8d7a.firebaseapp.com",
+          projectId: "saas-teste-c8d7a",
+          storageBucket: "saas-teste-c8d7a.firebasestorage.app",
+          messagingSenderId: "281601947474",
+          appId: "1:281601947474:web:1e580dbb06b685bf5d2c8b"
         };
 
         let app, db, auth, userId = null, dbCollection, transactionsCollection;
@@ -480,9 +465,7 @@
             customPeriodContainer: document.getElementById('customPeriodContainer'),
             startDateInput: document.getElementById('startDateInput'),
             endDateInput: document.getElementById('endDateInput'),
-            transactionCategory: document.getElementById('transactionCategory'),
-            topExpensesByCategory: document.getElementById('topExpensesByCategory'),
-            topIncomesByCategory: document.getElementById('topIncomesByCategory')
+            transactionCategory: document.getElementById('transactionCategory')
         };
 
         const showInfoModal = (message) => {
@@ -1212,8 +1195,8 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-2 text-sm mb-4">
                             <div><strong>Telefone:</strong> ${order.clientPhone || 'N/A'}</div>
                             <div><strong>Status:</strong> <span class="font-semibold">${order.orderStatus}</span></div>
-                            <div><strong>Data do Pedido:</strong> ${order.orderDate ? new Date(order.orderDate + 'T00:00:00').toLocaleDateString('pt-BR') : 'N/A'}</div>
-                            <div><strong>Data de Entrega:</strong> ${order.deliveryDate ? new Date(order.deliveryDate + 'T00:00:00').toLocaleDateString('pt-BR') : 'N/A'}</div>
+                            <div><strong>Data do Pedido:</strong> ${order.orderDate ? new Date(order.orderDate + 'T00:00:00').toLocaleDateString() : 'N/A'}</div>
+                            <div><strong>Data de Entrega:</strong> ${order.deliveryDate ? new Date(order.deliveryDate + 'T00:00:00').toLocaleDateString() : 'N/A'}</div>
                         </div>
                         <h3 class="font-bold text-lg mt-4">Peças</h3>
                         <table class="w-full text-left text-sm mt-2">
@@ -1411,18 +1394,10 @@
             let contasAReceber = 0;
             let valorRecebido = 0;
 
-            const expenseCategories = {};
-            const incomeCategories = {};
-
             filteredTransactions.forEach(t => {
                 const amount = parseFloat(t.amount) || 0;
-                const category = t.category?.trim() || '(Sem Categoria)';
-
                 if (t.type === 'income') {
                     faturamentoBruto += amount;
-                    if (!incomeCategories[category]) incomeCategories[category] = 0;
-                    incomeCategories[category] += amount;
-
                     if (t.status === 'a_receber') {
                         contasAReceber += amount;
                     } else {
@@ -1430,8 +1405,6 @@
                     }
                 } else if (t.type === 'expense') {
                     despesasTotais += amount;
-                    if (!expenseCategories[category]) expenseCategories[category] = 0;
-                    expenseCategories[category] += amount;
                 }
             });
 
@@ -1441,36 +1414,6 @@
             DOM.despesasTotais.textContent = `R$ ${despesasTotais.toFixed(2)}`;
             DOM.contasAReceber.textContent = `R$ ${contasAReceber.toFixed(2)}`;
             DOM.lucroLiquido.textContent = `R$ ${lucroLiquido.toFixed(2)}`;
-
-            const renderCategoryAnalytics = (container, categoryData, totalValue, colorClass) => {
-                container.innerHTML = '';
-                if (Object.keys(categoryData).length === 0) {
-                    container.innerHTML = `<p class="text-gray-500">Nenhum lançamento no período.</p>`;
-                    return;
-                }
-
-                const sortedCategories = Object.entries(categoryData)
-                    .sort(([, a], [, b]) => b - a)
-                    .slice(0, 5);
-
-                sortedCategories.forEach(([category, amount]) => {
-                    const percentage = totalValue > 0 ? ((amount / totalValue) * 100).toFixed(1) : 0;
-                    const item = document.createElement('div');
-                    item.innerHTML = `
-                        <div class="flex justify-between items-center text-sm mb-1">
-                            <span class="font-semibold text-gray-700 truncate pr-2">${category}</span>
-                            <span class="text-gray-600">R$ ${amount.toFixed(2)} <span class="text-xs font-medium text-gray-500">(${percentage}%)</span></span>
-                        </div>
-                        <div class="w-full bg-gray-200 rounded-full h-2">
-                            <div class="${colorClass} h-2 rounded-full" style="width: ${percentage}%"></div>
-                        </div>
-                    `;
-                    container.appendChild(item);
-                });
-            };
-
-            renderCategoryAnalytics(DOM.topExpensesByCategory, expenseCategories, despesasTotais, 'bg-red-500');
-            renderCategoryAnalytics(DOM.topIncomesByCategory, incomeCategories, faturamentoBruto, 'bg-green-500');
 
             const transactionsHtml = filteredTransactions.map(t => {
                 const isIncome = t.type === 'income';
@@ -1590,8 +1533,8 @@
                     date: new Date().toISOString().split('T')[0]
                 });
              } catch(error) {
-                console.error("Erro ao marcar como recebido:", error);
-                showInfoModal("Não foi possível atualizar o lançamento.");
+                 console.error("Erro ao marcar como recebido:", error);
+                 showInfoModal("Não foi possível atualizar o lançamento.");
              }
         };
         
