--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="authContainer" class="flex items-center justify-center min-h-screen">
         <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-xl shadow-md">
             <form id="loginForm">
-                <h2 class="text-2xl font-bold text-center">Login1 (Ambiente de Testes)</h2>
+                <h2 class="text-2xl font-bold text-center">Login (Ambiente de Testes)</h2>
                 <div class="mt-4 space-y-4">
                     <input type="email" id="loginEmail" placeholder="E-mail" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                     <input type="password" id="loginPassword" placeholder="Senha" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -51,7 +51,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1 <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -110,6 +110,21 @@
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-red-800">DESPESAS TOTAIS</h3><p id="despesasTotais" class="text-2xl font-bold text-red-900">R$ 0,00</p></div>
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-yellow-800">CONTAS A RECEBER</h3><p id="contasAReceber" class="text-2xl font-bold text-yellow-900">R$ 0,00</p></div>
                     <div class="bg-white p-6 rounded-lg shadow-sm border"><h3 class="text-sm font-semibold text-blue-800">LUCRO LÍQUIDO</h3><p id="lucroLiquido" class="text-2xl font-bold text-blue-900">R$ 0,00</p></div>
+                </div>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+                    <div class="bg-white p-6 rounded-lg shadow-sm border">
+                        <h3 class="text-lg font-bold mb-4 text-red-800">Top 5 Despesas por Categoria</h3>
+                        <div id="topExpensesByCategory">
+                            <p class="text-sm text-gray-500">Nenhum dado no período.</p>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm border">
+                        <h3 class="text-lg font-bold mb-4 text-green-800">Top 5 Receitas por Categoria</h3>
+                        <div id="topIncomesByCategory">
+                            <p class="text-sm text-gray-500">Nenhum dado no período.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm border">
                     <div class="flex justify-between items-center mb-4">
@@ -465,7 +480,9 @@
             customPeriodContainer: document.getElementById('customPeriodContainer'),
             startDateInput: document.getElementById('startDateInput'),
             endDateInput: document.getElementById('endDateInput'),
-            transactionCategory: document.getElementById('transactionCategory')
+            transactionCategory: document.getElementById('transactionCategory'),
+            topExpensesByCategory: document.getElementById('topExpensesByCategory'),
+            topIncomesByCategory: document.getElementById('topIncomesByCategory')
         };
 
         const showInfoModal = (message) => {
@@ -1414,6 +1431,50 @@
             DOM.despesasTotais.textContent = `R$ ${despesasTotais.toFixed(2)}`;
             DOM.contasAReceber.textContent = `R$ ${contasAReceber.toFixed(2)}`;
             DOM.lucroLiquido.textContent = `R$ ${lucroLiquido.toFixed(2)}`;
+
+            // Lógica para Análise por Categoria
+            const expenseCategories = {};
+            const incomeCategories = {};
+
+            filteredTransactions.forEach(t => {
+                const amount = parseFloat(t.amount) || 0;
+                const category = t.category || 'Sem Categoria';
+
+                if (t.type === 'expense') {
+                    if (!expenseCategories[category]) expenseCategories[category] = 0;
+                    expenseCategories[category] += amount;
+                } else if (t.type === 'income') {
+                    if (!incomeCategories[category]) incomeCategories[category] = 0;
+                    incomeCategories[category] += amount;
+                }
+            });
+
+            const formatCategoryList = (categoryData, containerElement) => {
+                const sortedCategories = Object.entries(categoryData)
+                    .sort(([, a], [, b]) => b - a)
+                    .slice(0, 5);
+
+                if (sortedCategories.length === 0) {
+                    containerElement.innerHTML = '<p class="text-sm text-gray-500">Nenhum dado no período.</p>';
+                    return;
+                }
+
+                let html = '<ul class="space-y-2 text-sm">';
+                sortedCategories.forEach(([category, total]) => {
+                    html += `
+                        <li class="flex justify-between items-center py-1">
+                            <span class="text-gray-700 truncate pr-2">${category}</span>
+                            <span class="font-semibold text-gray-900 whitespace-nowrap">R$ ${total.toFixed(2)}</span>
+                        </li>
+                    `;
+                });
+                html += '</ul>';
+                containerElement.innerHTML = html;
+            };
+
+            formatCategoryList(expenseCategories, DOM.topExpensesByCategory);
+            formatCategoryList(incomeCategories, DOM.topIncomesByCategory);
+
 
             const transactionsHtml = filteredTransactions.map(t => {
                 const isIncome = t.type === 'income';
