--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1 <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2 <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -126,6 +126,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="bg-white p-6 rounded-lg shadow-sm border">
                     <div class="flex justify-between items-center mb-4">
                         <h3 class="text-xl font-bold">Lançamentos</h3>
@@ -133,6 +134,10 @@
                             <button id="addIncomeBtn" class="bg-green-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-green-600">+ Entrada</button>
                             <button id="addExpenseBtn" class="bg-red-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-red-600">- Despesa</button>
                         </div>
+                    </div>
+                    
+                    <div class="mb-4">
+                        <input type="text" id="transactionSearchInput" placeholder="Buscar por descrição..." class="w-full p-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div class="overflow-x-auto">
                         <table class="w-full text-left">
@@ -482,7 +487,8 @@
             endDateInput: document.getElementById('endDateInput'),
             transactionCategory: document.getElementById('transactionCategory'),
             topExpensesByCategory: document.getElementById('topExpensesByCategory'),
-            topIncomesByCategory: document.getElementById('topIncomesByCategory')
+            topIncomesByCategory: document.getElementById('topIncomesByCategory'),
+            transactionSearchInput: document.getElementById('transactionSearchInput')
         };
 
         const showInfoModal = (message) => {
@@ -1432,7 +1438,6 @@
             DOM.contasAReceber.textContent = `R$ ${contasAReceber.toFixed(2)}`;
             DOM.lucroLiquido.textContent = `R$ ${lucroLiquido.toFixed(2)}`;
 
-            // Lógica para Análise por Categoria
             const expenseCategories = {};
             const incomeCategories = {};
 
@@ -1475,8 +1480,12 @@
             formatCategoryList(expenseCategories, DOM.topExpensesByCategory);
             formatCategoryList(incomeCategories, DOM.topIncomesByCategory);
 
+            const searchTerm = DOM.transactionSearchInput.value.toLowerCase();
+            const displayTransactions = searchTerm
+                ? filteredTransactions.filter(t => t.description.toLowerCase().includes(searchTerm))
+                : filteredTransactions;
 
-            const transactionsHtml = filteredTransactions.map(t => {
+            const transactionsHtml = displayTransactions.map(t => {
                 const isIncome = t.type === 'income';
                 const isReceivable = isIncome && t.status === 'a_receber';
                 
@@ -1509,7 +1518,7 @@
                     </tr>`;
             }).join('');
 
-            DOM.transactionsList.innerHTML = transactionsHtml || '<tr><td colspan="5" class="text-center py-4 text-gray-500">Nenhum lançamento encontrado para este período.</td></tr>';
+            DOM.transactionsList.innerHTML = transactionsHtml || `<tr><td colspan="5" class="text-center py-4 text-gray-500">${searchTerm ? 'Nenhum lançamento encontrado para a busca.' : 'Nenhum lançamento encontrado para este período.'}</td></tr>`;
         };
 
         const saveTransaction = async () => {
@@ -1829,6 +1838,8 @@
                 e.target.parentElement.remove();
             }
         });
+
+        DOM.transactionSearchInput.addEventListener('input', renderFinanceDashboard);
 
     </script>
 </body>
