--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         .status-Em-Produção { @apply bg-purple-100 text-purple-800; }
         .status-Finalizado { @apply bg-green-100 text-green-800; }
         .status-Entregue { @apply bg-gray-200 text-gray-800; }
-        .kanban-board { display: flex; overflow-x: auto; padding-bottom: 1rem; gap: 1.5rem; }
-        .kanban-column { flex: 0 0 340px; max-width: 340px; }
+        .responsive-grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fill, minmax(340px, 1fr)); }
     </style>
 </head>
 <body class="antialiased text-gray-800 bg-slate-50">
@@ -51,7 +50,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 4 <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -80,7 +79,7 @@
 
         <main id="mainContent" class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8">
             <div id="ordersDashboard">
-                <div id="ordersList" class="kanban-board">
+                <div id="ordersList">
                     <div id="loadingIndicator" class="text-center w-full text-gray-500">Carregando pedidos...</div>
                 </div>
             </div>
@@ -88,7 +87,7 @@
                 <div class="mb-6 flex flex-wrap gap-4 justify-between items-center">
                     <h2 class="text-2xl font-bold text-gray-800">Dashboard Financeiro</h2>
                     <div class="flex items-center gap-4 flex-wrap">
-                         <div id="customPeriodContainer" class="hidden flex items-center gap-2">
+                        <div id="customPeriodContainer" class="hidden flex items-center gap-2">
                             <input type="date" id="startDateInput" class="p-2 border rounded-md bg-white text-sm">
                             <span class="text-gray-500">até</span>
                             <input type="date" id="endDateInput" class="p-2 border rounded-md bg-white text-sm">
@@ -100,7 +99,7 @@
                             <option value="custom">Período Personalizado</option>
                         </select>
                         <button id="copyReportBtn" class="bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-gray-700 text-sm flex items-center gap-2" title="Copiar dados para colar em planilha">
-                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M7 9a2 2 0 012-2h6a2 2 0 012 2v6a2 2 0 01-2 2H9a2 2 0 01-2-2V9z" /><path d="M5 3a2 2 0 00-2 2v6a1 1 0 102 0V5h6a1 1 0 100-2H5z" /></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M7 9a2 2 0 012-2h6a2 2 0 012 2v6a2 2 0 01-2 2H9a2 2 0 01-2-2V9z" /><path d="M5 3a2 2 0 00-2 2v6a1 1 0 102 0V5h6a1 1 0 100-2H5z" /></svg>
                             Copiar Relatório
                         </button>
                     </div>
@@ -674,7 +673,7 @@
             DOM.ordersList.className = '';
 
             if (currentOrdersView === 'pending') {
-                DOM.ordersList.classList.add('kanban-board');
+                DOM.ordersList.classList.add('responsive-grid');
                 const nonDeliveredOrders = allOrders.filter(o => o.orderStatus !== 'Entregue');
                 if (nonDeliveredOrders.length === 0) {
                     DOM.ordersList.innerHTML = '<div class="w-full text-center py-10 text-gray-500">Nenhum pedido pendente.</div>';
@@ -695,7 +694,7 @@
                         'Sem Data de Entrega' :
                         new Date(date + 'T00:00:00').toLocaleDateString('pt-BR', { day: '2-digit', month: 'long', year: 'numeric' });
                     html += `
-                        <div class="kanban-column">
+                        <div>
                             <h2 class="font-bold text-lg text-gray-700 mb-4 flex items-center">
                                 ${formattedDate}
                                 <span class="ml-2 text-sm font-medium bg-slate-200 text-slate-600 rounded-full px-2 py-0.5">${orders.length}</span>
@@ -1844,5 +1843,3 @@
     </script>
 </body>
 </html>
-
-
