--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Pedidos 1 (TESTES)</title>
+    <title>Gerenciador de Pedidos (TESTES)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,9 +48,9 @@
 
     <div id="app" class="hidden">
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
+            <div class="mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -77,7 +77,7 @@
             </div>
         </header>
 
-        <main id="mainContent" class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8">
+        <main id="mainContent" class="mx-auto p-4 sm:p-6 lg:p-8">
             <div id="ordersDashboard">
                 <div id="ordersList">
                     <div id="loadingIndicator" class="text-center w-full text-gray-500">Carregando pedidos...</div>
@@ -676,7 +676,7 @@
                 DOM.ordersList.classList.add('responsive-grid');
                 const nonDeliveredOrders = allOrders.filter(o => o.orderStatus !== 'Entregue');
                 if (nonDeliveredOrders.length === 0) {
-                    DOM.ordersList.innerHTML = '<div class="w-full text-center py-10 text-gray-500">Nenhum pedido pendente.</div>';
+                    DOM.ordersList.innerHTML = '<div class="w-full text-center py-10 text-gray-500 col-span-full">Nenhum pedido pendente.</div>';
                     return;
                 }
                 nonDeliveredOrders.sort((a, b) => new Date(a.deliveryDate) - new Date(b.deliveryDate));
