--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="bg-white shadow-sm border-b border-slate-200 sticky top-0 z-40">
             <div class="mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div>
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 3<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 2<span class="text-sm font-medium text-red-500 bg-red-100 py-1 px-2 rounded-md">TESTE</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                     <button id="addOrderBtn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center justify-center">
@@ -1281,22 +1281,19 @@
                 const detailsPdfHeight = (detailsImgProps.height * (pdfWidth - margin * 2)) / detailsImgProps.width;
 
                 pdf.addImage(detailsImgData, 'PNG', margin, currentY, pdfWidth - margin * 2, detailsPdfHeight);
-                currentY += detailsPdfHeight + 10; // Adiciona um espaço
+                currentY += detailsPdfHeight + 10; 
 
                 // 2. Renderizar Mockups
                 const mockupsElement = document.getElementById('printable-mockups');
-                if (mockupsElement.querySelector('.mockup-image')) {
+                if (mockupsElement && mockupsElement.querySelector('.mockup-image')) {
                     const mockupsCanvas = await html2canvas(mockupsElement, { scale: 2, useCORS: true, backgroundColor: null });
                     const mockupsImgData = mockupsCanvas.toDataURL('image/png');
                     const mockupsImgProps = pdf.getImageProperties(mockupsImgData);
                     const mockupsPdfHeight = (mockupsImgProps.height * (pdfWidth - margin * 2)) / mockupsImgProps.width;
 
-                    // 3. Verificar espaço e adicionar mockups
                     if (currentY + mockupsPdfHeight < pdfHeight - margin) {
-                        // Cabe na mesma página
                         pdf.addImage(mockupsImgData, 'PNG', margin, currentY, pdfWidth - margin * 2, mockupsPdfHeight);
                     } else {
-                        // Não cabe, adiciona nova página
                         pdf.addPage();
                         pdf.addImage(mockupsImgData, 'PNG', margin, margin, pdfWidth - margin * 2, mockupsPdfHeight);
                     }
