--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
                 <div class="flex items-center">
                     <img src="https://i.ibb.co/BHq1HsPG/2-removebg-preview.png" alt="Logo" class="h-8 w-auto mr-3">
-                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos 1<span class="text-xs font-semibold bg-yellow-200 text-yellow-800 py-1 px-2 rounded-full align-middle">AMBIENTE DE TESTES</span></h1>
+                    <h1 class="text-xl font-bold text-gray-900">Gerenciador de Pedidos <span class="text-xs font-semibold bg-yellow-200 text-yellow-800 py-1 px-2 rounded-full align-middle">AMBIENTE DE TESTES</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
                      <button id="priceTableBtn" class="bg-gray-200 text-gray-700 font-semibold py-2 px-3 rounded-lg shadow-md hover:bg-gray-300 transition duration-300 flex items-center justify-center" title="Tabela de Preços">
@@ -986,11 +986,13 @@
                 showInfoModal("Não há dados para fazer backup.");
                 return;
             }
-            const backupData = {
+            const dataToSave = {
                 orders: allOrders.map(({ id, ...rest }) => rest),
-                transactions: allTransactions.map(({ id, ...rest }) => rest)
+                transactions: allTransactions
+                    .filter(t => t && typeof t === 'object') // CORREÇÃO: Garante que apenas objetos válidos sejam processados
+                    .map(({ id, ...rest }) => rest)
             };
-            const dataStr = JSON.stringify(backupData, null, 2);
+            const dataStr = JSON.stringify(dataToSave, null, 2);
             const dataBlob = new Blob([dataStr], { type: 'application/json' });
             const url = URL.createObjectURL(dataBlob);
             const link = document.createElement('a');
@@ -1066,7 +1068,7 @@
                         const snapshot = await getDocs(query(collRef));
                         const deleteBatch = writeBatch(db);
                         snapshot.forEach(docSnap => deleteBatch.delete(docSnap.ref));
-                        await deleteBatch.commit();
+                        if (!snapshot.empty) await deleteBatch.commit();
                     }
 
                     // Add new data
@@ -1079,7 +1081,9 @@
                         const newDocRef = doc(transactionsCollection);
                         addBatch.set(newDocRef, transaction);
                     });
-                    await addBatch.commit();
+                    if ((backupObject.orders || []).length > 0 || (backupObject.transactions || []).length > 0) {
+                        await addBatch.commit();
+                    }
                     showInfoModal(`Dados substituídos. ${(backupObject.orders || []).length} pedidos e ${(backupObject.transactions || []).length} lançamentos importados.`);
                 }
             }
@@ -1267,10 +1271,8 @@
                     }
                 } else { // detalhado
                     const totalQty = partItem.querySelectorAll('.detailed-item-row').length;
-                    if (totalQty > 0) {
-                       const finRow = createFinancialRow(partId, partName, totalQty, 'detailed');
-                       DOM.financialsContainer.appendChild(finRow);
-                    }
+                    const finRow = createFinancialRow(partId, partName, totalQty, 'detailed');
+                    DOM.financialsContainer.appendChild(finRow);
                 }
             });
             updateFinancials();
